--- a/style.css
+++ b/style.css
@@ -74,6 +74,9 @@ footer{
     text-align: center;
     font-size: 15px;
     padding: 20px;
+    position: absolute; 
+    left: 0 ; right: 0; bottom: 0; 
+    height:[footer-height] 
     
     
     
