--- a/style.css
+++ b/style.css
@@ -1,83 +1,105 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     color: #777;
-    width: 960px;
     font-size: 18px;
     background-color: #777;
-    margin-left: 15%;
-    margin-right: 10%
+    height: 100%;
+    width: 960px;
+    margin: 0px auto;
+}
+
+header, nav {
+    margin-top: 10px;
+}
+
+section, aside {
+    margin-top: 20px;
 }
 
 header{
     background-color: #ebebeb;
     text-align: center;
-    font-size: 15px;
-    padding: 30px;
-    width:75%;
-    margin: 5px
+    /* font-size: 15px; */
+    /* padding: 30px; */
+    /*width:75%;*/
+    /* margin: 5px */
 }
 
 nav{
     background-color: #ebebeb;
     text-align: center;
-    font-size: 15px;
-    margin: 5px;
-    padding: 30px;
-    width: 75%;
+    /* font-size: 15px; */
+    /* margin: 5px; */
+    /* margin-bottom: 12px; */
+    /* padding: 30px; */
+    /*width: 75%;*/
 
+}
+
+header,nav,footer{
+    padding: 30px 0px 30px 0px;
 }
 
 section{
     background-color: #ebebeb;
-    width: 495px;
+    width: 475px;
     text-align: center;
-    font-size: 15px;
-    padding: 20px;
-    margin: 5px
-    
-    
+    float: left;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    padding: 30px 10px 10px 10px;
+    /* font-size: 15px; */
+    /* padding: 15px; */
+    /* margin: 5px */
+}
 
+aside{
+    background-color: #ebebeb;
+    text-align: center;
+    /* font-size: 15px; */
+    /* margin: 15px; */
+    /* margin-left: 15px; */
+    padding-top: 20px;
+    float: left;
+    width: 445px;
+    height: 287px;
 }
 
 article{
     color: #ebebeb;
     background-color: #777;
     text-align: center;
-    font-size: 15px;
+    /* font-size: 15px; */
     padding: 20px;
-    margin: 15px
+    margin-top: 20px;
 }
 
 h1,p{
     color: #777;
     background-color: #ebebeb;
     text-align: center;
-    font-size: 15px;
-    padding: 20px
+    margin: 0px 0px 10px 0px;
+    /* font-size: 15px; */
+    padding: 20px;
 }
 
-aside{
-    background-color: #ebebeb;
-    text-align: center;
-    font-size: 15px;
-    margin: 15px;
-    margin-left: 15px;
-    float: right;
+h1{
+    font-style: normal;
+    margin-top:20px;
 }
-.wrapper{
-    height: 100%
-}
+
+
 footer{
     background-color: #ebebeb;
     text-align: center;
-    font-size: 15px;
-    padding: -100px;
-    position: absolute; 
-    margin-top: 10px;
-    margin: 5px;
-    height: 100px;
-    width: 69%;
-    clear: both
+    /* font-size: 15px; */
+    /* padding: -100px; */
+    /* position: absolute;  */
+    /* margin-top: 10px; */
+    /* margin: 5px; */
+    /*height: 100px;
+    /* width: 69%; */
+    clear: both;
     
     
     
